--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,8 @@ services:
     build: .
     ports:
       - 8080:8080
-    depends_on:
-      - java_db
-
-  java_db:
-    container_name: obsac_db
-    image: postgres:latest
-    ports:
-      - 5433:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123456789
-      POSTGRES_DB: obsac_db
+      - DB_URL=${DB_URL}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+    env_file: .env  # Doble seguridad
